  Bugfixes:
    - Faraway hexes had no trades sometimes.
    - Trade overview input and output filtering weren't combining correctly.
    - "Show claimed only" trade overview filter was showing only unclaimed trades.
  Features:
    - Trade overview now has options to filter for exact inputs or exact outputs.
    - Trade overview now has sorting options for various metrics.
    - Items can now reach silver ranks. [img=silver-star]
    - Added more quests and rewards.
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 12/5/25
  Major Features:
    - Added [planet=vulcanus]
  Balancing:
    - Decreased the rate at which item values scale on Nauvis.
    - Reduced productivity bonuses to half, except for the quest reward.
  Bugfixes:
    - Fixed volume calculation for the extra trades added by bronze rank items.
  Optimizations:
    - Optimized trade overview.
  Minor Features:
    - Added commands /spawn-ship, /chart
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 7/5/25
  Features:
    - Added more quests and rewards.
    - Implemented the Biter Rammer quest.
  Changes:
    - Added rewards to some quests which enable claiming some hexes for free.
  Bugfixes:
    - Fixed that deleting a hex core would delete all hex core loaders and unloaders on the map.
    - Fixed that claiming hexes adjacent to a hex where a core was deleted wasn't forming a bridge.
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 3/5/25
  Minor Features:
    - Copying and pasting hex core settings now copies over loader filters along with the inventory filters.
    - Clicking on the arrow in a trade pings it in chat.
    - Clicking on any ping in chat that's on a hex core brings up that hex core's GUI.