@@ -251,7 +251,7 @@ rank-bonus-unique-5=[color=gray](WIP)[.color]
 core-finder-button=Locate the hex core with this trade.
 clear-filters=Clear filters
 trade-contents=Trade Contents
-processing-finished=Processing finished.
+processing-finished=Listed __1__ trades.
 total-input-value=Total Input Value: __1__
 total-output-value=Total Output Value: __1__
 productivity-bonus=Productivity
